# agentX

./: .gitignore  README.md  pyproject.toml
client/: pyproject.toml
client/agentx/: cli.py  history.py  loop.py  tools.py
src/agent/: cli.py  server.py
src/agent/code_index/: __init__.py  chunker.py  parser.py  search.py  symbols.py  vectors.py  watcher.py
src/agent/context/: __init__.py  assembler.py  budgeter.py
src/agent/core/: history.py  loop.py
src/agent/llm/: chat.py  embed.py  prompts.py  schemas.py
src/agent/memory/: consolidator.py  episodic.py  project.py  working.py
src/agent/observability/: __init__.py  logger.py  tracer.py
src/agent/orchestrator/: __init__.py  graph.py  nodes.py  routing.py  state.py
src/agent/safety/: approval.py  policy.py
src/agent/tools/: files.py  git.py  registry.py  search.py  shell.py  subtask.py  tests.py  todo.py  web.py
src/agent/verify/: __init__.py  runner.py
tests/: conftest.py
tests/fixtures/sample_project/: broken.py  handler.py  main.py  utils.go
tests/fixtures/sample_project/tests/: test_main.py
tests/integration/: test_index_roundtrip.py  test_memory_persistence.py
tests/unit/: test_chunker.py  test_context_assembler.py  test_context_budgeter.py  test_llm_chat.py  test_llm_prompts.py  test_llm_schemas.py  test_memory_consolidator.py  test_memory_episodic.py  test_memory_project.py  test_memory_working.py  test_observability.py  test_orchestrator_nodes.py  test_registry.py  test_safety_approval.py  test_safety_policy.py  test_symbols.py  test_tools_files.py  test_tools_git.py  test_tools_search.py  test_tools_shell.py  test_tools_tests.py  test_verifier.py
