[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-coding-agent"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-core>=1.0",
    "langchain-ollama>=1.0",
    "packaging>=23",
    "requests>=2.31",
    "pydantic>=2.5,<3",
    "httpx>=0.27,<1",
    "typer>=0.12,<1",
    "rich>=13,<14",
    "aiosqlite>=0.19",
    "langgraph-checkpoint-sqlite>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
index = [
    "lancedb>=0.8,<1",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10,<2",
    "watchdog>=4,<6",
    "tiktoken>=0.7,<1",
]
serve = [
    "fastapi>=0.111,<1",
    "uvicorn>=0.29,<1",
]
groq = [
    "langchain-groq>=1.0",
]
search = [
    "duckduckgo-search>=6,<7",
]
all = [
    "local-coding-agent[index,serve,groq,search]",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
agentX = "agent.cli:agentx_main"
agent = "agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:anchorpy"

[tool.coverage.run]
source = ["agent"]
branch = true

[tool.coverage.report]
fail_under = 85
