[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentx-client"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
agentX = "agentx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentx"]
