[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentx-client"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "aiosqlite>=0.19",
]

[project.scripts]
agentX = "agentx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentx"]
